Fixing title alignment

--- a/src/index.css
+++ b/src/index.css
@@ -110,6 +110,8 @@ body {
 
 #title{
     font-size:5vw;
+    vertical-align: middle;
+    margin: auto;
 }
 
 .buttonIcons{
